--- a/.github/workflows/deploy_to_webapp.yml
+++ b/.github/workflows/deploy_to_webapp.yml
@@ -14,15 +14,9 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7.4' 
-        architecture: 'x64' # What's our bitness on Linux?
+        architecture: 'x64' 
 
-    - name: Install modules
-      run: |
-        python3 -m venv antenv
-        source antenv/bin/activate
-        pip install -r requirements.txt
-
-    # Finally, deploy the app to App Service (https://github.com/Azure/webapps-deploy)
+    # Deploy the app to App Service (https://github.com/Azure/webapps-deploy)
     - uses: azure/webapps-deploy@v1
       with:
         app-name: schpythonignite2019
